fix(icon): remove legacy ie overflow css causing ios clipping issues
It was reported that this normalize CSS for IE 9/10/11, in SWC which
converts to the selector :host(:not(:root)), was causing problems with
clipping in iOS mobile for Express as well as on Safari on MacOS. This
is safe to remove as the project does not support IE 11.

--- a/components/icon/icons.css
+++ b/components/icon/icons.css
@@ -26,11 +26,6 @@
 	/* Fill should match the current text color. */
 	fill: currentColor;
 
-	/* Hide the SVG overflow in IE. */
-	&:not(:root) {
-		overflow: hidden;
-	}
-
 	/* Don't catch clicks or hover, otherwise they may not escape the SVG. */
 	pointer-events: none;
 }
